--- a/index.html
+++ b/index.html
@@ -277,17 +277,26 @@
       }
       const peerConnection = new RTCPeerConnection({
         iceServers: [
-          { urls: 'stun:stun.l.google.com:19302' },
-          { urls: 'stun:stun1.l.google.com:19302' },
+          { urls: "stun:stun.relay.metered.ca:80" },
           {
-            urls: 'turn:global.relay.metered.ca:443?transport=tcp',
-            username: '8008f3d422fbe49ca4157b23',
-            credential: 'E7rLb3LegFMDdjem'
+            urls: "turn:global.relay.metered.ca:80",
+            username: "8008f3d422fbe49ca4157b23",
+            credential: "E7rLb3LegFMDdjem"
           },
           {
-            urls: 'turn:relay1.expressturn.com:3478?transport=tcp',
-            username: '000000002066560922',
-            credential: 'KbPraDRQJfdBPGf4zBA7GJp31qY='
+            urls: "turn:global.relay.metered.ca:80?transport=tcp",
+            username: "8008f3d422fbe49ca4157b23",
+            credential: "E7rLb3LegFMDdjem"
+          },
+          {
+            urls: "turn:global.relay.metered.ca:443",
+            username: "8008f3d422fbe49ca4157b23",
+            credential: "E7rLb3LegFMDdjem"
+          },
+          {
+            urls: "turns:global.relay.metered.ca:443?transport=tcp",
+            username: "8008f3d422fbe49ca4157b23",
+            credential: "E7rLb3LegFMDdjem"
           }
         ],
         iceTransportPolicy: 'all'
@@ -382,7 +391,7 @@
             startPeerConnection(targetId, isOfferer);
           }
         }
-      }, 10000);
+      }, 30000); // Increased to 30s
       connectionTimeouts.set(targetId, timeout);
     }
 
@@ -537,11 +546,15 @@
 
     function cleanupPeerConnection(targetId) {
       const peerConnection = peerConnections.get(targetId);
+      const dataChannel = dataChannels.get(targetId);
+      if (dataChannel && dataChannel.readyState === 'open') {
+        console.log(`Skipping cleanup for ${targetId}: data channel is open`);
+        return;
+      }
       if (peerConnection) {
         peerConnection.close();
         peerConnections.delete(targetId);
       }
-      const dataChannel = dataChannels.get(targetId);
       if (dataChannel) {
         dataChannel.close();
         dataChannels.delete(targetId);
