--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     .message-bubble {
       max-width: 70%;
       margin: 0.5rem 1rem;
-      padding: 0.75rem 1rem;
+      padding: 0.5rem 1rem; /* Reduced top/bottom padding from 0.75rem to 0.5rem */
       border-radius: 1rem;
       word-wrap: break-word;
     }
