--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
     #messageInput {
       resize: none;
       overflow-y: auto;
-      min-height: 2.5rem; /* Matches single-line input height */
+      min-height: 2.5rem; /* Single-line height */
       max-height: 7.5rem; /* 5 lines at ~1.5rem per line */
       line-height: 1.5rem;
       width: 100%;
+      box-sizing: border-box;
     }
   </style>
 </head>
@@ -65,7 +66,7 @@
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-red-600 hidden">New Session</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
         <div class="flex items-start gap-2">
-          <textarea id="messageInput" class="border border-gray-300 p-2 flex-grow rounded" placeholder="Type a message..." rows="1"></textarea>
+          <textarea id="messageInput" class="border border-gray-300 p-2 flex-grow rounded" placeholder="Type a message..." rows="1" cols="30" maxlength="1000"></textarea>
           <button id="sendButton" class="bg-blue-500 text-white w-10 h-10 flex items-center justify-center rounded-full hover:bg-blue-600">📤</button>
         </div>
       </div>
@@ -689,7 +690,17 @@
       }
     };
 
-    document.getElementById('messageInput').addEventListener('keydown', (event) => {
+    const messageInput = document.getElementById('messageInput');
+    messageInput.addEventListener('input', () => {
+      const lines = messageInput.value.split('\n').length;
+      const maxLines = 5;
+      messageInput.rows = Math.min(lines, maxLines);
+      if (lines > maxLines) {
+        messageInput.scrollTop = messageInput.scrollHeight;
+      }
+    });
+
+    messageInput.addEventListener('keydown', (event) => {
       if (event.key === 'Enter' && !event.shiftKey) {
         event.preventDefault();
         const message = event.target.value.trim();
@@ -723,6 +734,7 @@
       statusElement.textContent = 'Start a new chat or connect to an existing one';
       document.getElementById('messages').innerHTML = '';
       document.getElementById('messageInput').value = '';
+      document.getElementById('messageInput').rows = 1;
       document.getElementById('usernameInput').value = username;
       document.getElementById('usernameConnectInput').value = username;
       document.getElementById('codeInput').value = '';
