--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
       margin-right: auto;
       border-bottom-left-radius: 0.25rem;
     }
-    #sendButton {
-      line-height: 1;
+    #chatContainer {
+      position: relative;
+      padding-bottom: 3rem; /* Space for input overlay */
     }
     #messageInput {
       resize: none;
       overflow-y: auto;
       height: 2.5rem; /* Single-line height */
-      max-height: 7.5rem; /* 5 lines at ~1.5rem per line */
+      max-height: 12.5rem; /* 5 lines at ~2.5rem per line */
       line-height: 1.5rem;
-      width: calc(100% - 3rem); /* Account for send button */
+      width: calc(100% - 4.5rem); /* Account for send button */
       box-sizing: border-box;
       position: absolute;
       bottom: 0.5rem;
@@ -61,9 +62,23 @@
       -ms-overflow-style: none;  /* IE and Edge */
       scrollbar-width: none;  /* Firefox */
     }
-    #chatContainer {
-      position: relative;
-      padding-bottom: 3rem; /* Space for input overlay */
+    #sendButton {
+      position: absolute;
+      bottom: 0.5rem;
+      right: 1rem;
+      z-index: 11;
+      width: 2.5rem;
+      height: 2.5rem;
+      background-color: #2563eb; /* Slightly darker blue */
+      color: white;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.2rem;
+    }
+    #sendButton:hover {
+      background-color: #1d4ed8;
     }
   </style>
 </head>
@@ -85,9 +100,9 @@
       <div id="chatContainer" class="hidden">
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-red-600 hidden">New Session</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
-        <div class="flex items-start gap-2">
+        <div class="relative">
           <textarea id="messageInput" class="flex-grow" placeholder="Type a message..." cols="30" maxlength="1000"></textarea>
-          <button id="sendButton" class="bg-blue-500 text-white w-10 h-10 flex items-center justify-center rounded-full hover:bg-blue-600">📤</button>
+          <button id="sendButton">📤</button>
         </div>
       </div>
       <div id="connectContainer" class="hidden">
@@ -714,10 +729,10 @@
 
     const messageInput = document.getElementById('messageInput');
     messageInput.addEventListener('input', () => {
-      const lineHeight = 1.5; /* rem */
+      const baseHeight = 2.5; /* rem */
       const maxLines = 5;
       const lines = messageInput.value.split('\n').length;
-      const newHeight = Math.min(lines, maxLines) * lineHeight + 1; /* +1rem for padding */
+      const newHeight = Math.min(lines, maxLines) * baseHeight;
       messageInput.style.height = `${newHeight}rem`;
       if (lines > maxLines) {
         messageInput.scrollTop = messageInput.scrollHeight;
