--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-red-600 transition-colors hidden">New Session</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded">
           <div id="waitingLogo" class="hidden">
-            <img src="https://via.placeholder.com/100x100.png?text=RightLogo" alt="Waiting Logo">
+            <img src="https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG" alt="Waiting Logo">
           </div>
         </div>
         <div class="input-container hidden">
@@ -854,7 +854,7 @@
       codeDisplayElement.textContent = '';
       codeDisplayElement.classList.add('hidden');
       statusElement.textContent = 'Start a new chat or connect to an existing one';
-      document.getElementById('messages').innerHTML = '<div id="waitingLogo" class="hidden"><img src="https://via.placeholder.com/100x100.png?text=RightLogo" alt="Waiting Logo"></div>';
+      document.getElementById('messages').innerHTML = '<div id="waitingLogo" class="hidden"><img src="https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG" alt="Waiting Logo"></div>';
       document.getElementById('messageInput').value = '';
       document.getElementById('messageInput').style.height = '2.5rem';
       document.getElementById('usernameInput').value = username;
