--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       border-radius: 0.5rem;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       position: relative; /* For logo positioning */
+      height: 256px; /* Explicit height for reference */
     }
     #waitingLogo {
       display: none; /* Hidden by default */
@@ -31,9 +32,9 @@
       bottom: 0;
     }
     #waitingLogo img {
-      width: 100px;
-      height: 100px;
-      object-fit: contain; /* Scale to fit while preserving aspect ratio */
+      max-width: 100%; /* Fit within #messages width */
+      max-height: 256px; /* Match #messages height */
+      object-fit: contain; /* Scale proportionally */
     }
     .message-bubble {
       max-width: 70%;
@@ -148,7 +149,8 @@
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-red-600 transition-colors hidden">New Session</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded">
           <div id="waitingLogo" class="hidden">
-            <img src="https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG" alt="Waiting Logo">
+            <img src="logo.JPG" alt="Waiting Logo">
+            <!-- Fallback: <img src="https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG" alt="Waiting Logo"> -->
           </div>
         </div>
         <div class="input-container hidden">
@@ -854,7 +856,7 @@
       codeDisplayElement.textContent = '';
       codeDisplayElement.classList.add('hidden');
       statusElement.textContent = 'Start a new chat or connect to an existing one';
-      document.getElementById('messages').innerHTML = '<div id="waitingLogo" class="hidden"><img src="https://raw.githubusercontent.com/Cooptroop1/anonmess/main/logo.JPG" alt="Waiting Logo"></div>';
+      document.getElementById('messages').innerHTML = '<div id="waitingLogo" class="hidden"><img src="logo.JPG" alt="Waiting Logo"></div>';
       document.getElementById('messageInput').value = '';
       document.getElementById('messageInput').style.height = '2.5rem';
       document.getElementById('usernameInput').value = username;
